
syntax = "proto3";

package verifytoken;

//  Update our verify-token route to use RPC instead.
/*  
Make sure your underlying implementation is as framework/library independent as possible.
Introducing gRPC into your code base should not introduce potential complications in the future sprints. 
Therefore, either take on this side quest with caution, or implement and maintain both REST and RPC 
implementations in your code base. This way, you can continue to refer to all of our future instructions and solutions, 
which would only address the REST implementation.
*/

// Generated according to https://cloud.google.com/apis/design/standard_methods
service VerifyTokenService {
  rpc VerifyToken(VerifyTokenRequest) returns (VerifyTokenResponse);
}

message VerifyTokenRequest {
  string token = 1;
}

// TODO: Find out if this is the best way to respond, but I feel like it could be simplify down to rely on boolean value instead?
message VerifyTokenResponse {
  string message = 1;
}